project/fitcok_mobile/211117

--- a/Project/fitcok_mobile/211117.md
+++ b/Project/fitcok_mobile/211117.md
@@ -4,16 +4,16 @@
 피트니스 상세페이지 이슈  
 ```
 
-### Dummy Data 집어넣기
-- 관리자 페이지, api 문서 등을 참고해서 dummy Data 생성
--  데이터를 받을 수 있는 뷰 형식으로 구성
-
+### 데이터를 받을 수 있는 컴포넌트 형식으로 구성
+- 필터링 로직. 
 
 ### 코드 최적화
 1) Flat List 최적화
 - 렌더링 방지
 - key 값에 Index 넣지 않기
 - renderItem 리턴 함수 밖으로 빼기
+- uesCallBack으로 렌더, 키값 리턴
+
 - 
 2) 아이콘 통일
 - SVG , PNG 두 개가 섞여서 사용되고 있는데 하나로 통일. (일부 경우 제외)
@@ -35,12 +35,16 @@
 
 8) 네트워크 호출 최소화 및 state 관리
 - state은 최대한 메인 스크린이 되는 Functional Component에서 관리하도록 함.
-- 
+
 
 
 ****
 
-### Remind
-1. Lesson Review / Inquiry Review / Center Review를 구분해서 접근할 필요 있음.
+### Study
+1. 렌더링을 최적화 하는 과정에서 React.memo를 남용하면 안되는다는 이야기를 들은적이 있는 어떤 이유에서 그런지 알아보기.
+
+
+
+
 
 
