project/fitcok_mobile/

--- a/Project/fitcok_mobile/211117.md
+++ b/Project/fitcok_mobile/211117.md
@@ -4,8 +4,15 @@
 피트니스 상세페이지 이슈  
 ```
 
-### 데이터를 받을 수 있는 컴포넌트 형식으로 구성
-- 필터링 로직. 
+### 프래그램 탭뷰
+
+변경된 디자인 프로그램 탭뷰 디자인 변경
+1) 재사용 컴포넌트 구성
+2) 데이터를 받을 수 있는 컴포넌트 형식으로 구성
+
+**** 
+
+
 
 ### 코드 최적화
 1) Flat List 최적화
@@ -20,6 +27,7 @@
 
 3) 컴포넌트 모듈화
 - 재사용성 높이기
+StartIconList /  
 
 4) 주석 정리
 - 영어 줄이고 한글 위주
@@ -36,9 +44,8 @@
 8) 네트워크 호출 최소화 및 state 관리
 - state은 최대한 메인 스크린이 되는 Functional Component에서 관리하도록 함.
 
-
-
 ****
+
 
 ### Study
 1. 렌더링을 최적화 하는 과정에서 React.memo를 남용하면 안되는다는 이야기를 들은적이 있는 어떤 이유에서 그런지 알아보기.
