project/fitcok_mobile/211118

--- a/Project/fitcok_mobile/211117.md
+++ b/Project/fitcok_mobile/211117.md
@@ -6,7 +6,7 @@
 
 ### 프래그램 탭뷰
 
-변경된 디자인 프로그램 탭뷰 디자인 변경
+변경된 디자인 프로그램 탭뷰 UI 인터렉션 구현 
 1) 재사용 컴포넌트 구성
 2) 데이터를 받을 수 있는 컴포넌트 형식으로 구성
 
@@ -49,6 +49,7 @@ StartIconList /
 
 ### Study
 1. 렌더링을 최적화 하는 과정에서 React.memo를 남용하면 안되는다는 이야기를 들은적이 있는 어떤 이유에서 그런지 알아보기.
+- https://ui.toast.com/weekly-pick/ko_20190731 (옆에 블로그에 잘 정리되어 있음. 관련 내용 추후에 정리하기)
 
 
 
