project/fitcok_mobile/211118

--- a/Project/fitcok_mobile/211118.md
+++ b/Project/fitcok_mobile/211118.md
@@ -4,15 +4,72 @@
 피트니스 상세페이지 이슈  
 ```
 
-### 리팩토링
-- 더미 데이터 집어넣고 필터링 로직 완성
+아래 내용을 피트니스 상세 페이지에 적용함.
+
+#### Flat List 최적화
+<pre><code>const renderItem = useCallback(({item}) => <ListItem item={item} />, [])
+const keyExtractor = useCallback((item) => item.id.toString(), [])
+</code></pre>
+
+```
+<FlatList 
+    data={DATA}
+    renderItem={renderItem}
+    keyExtractor={keyExtractor}
+/>
+```
+
+#### 중복 제거 필터링 로직
+```
+const FilteringFunc = (passedData, type) => {
+    const filteredList = [
+        ...new Map(
+            passedData.map(item => [JSON.stringify(item[type]), item]),
+        ).values(),
+    ];
+    return filteredList;
+};
+
+```
+
+#### 다중 props 간소화 (리팩토링)
+```
+const styleProps = {
+    marginRight: 8 + 'px',
+    marginBottom: 0 + 'px',
+    paddingHorizontal: 16 + 'px',
+    paddingVertical: 6 + 'px',
+    fontSize: ResponsiveSize(12) + 'px',
+    fontFamily: 'SpoqaHanSansNeo-Medium',
+    lineHeight: 20 + 'px',
+    letterSpacing: 0.2 + 'px',
+};
+
+
+
+    <RoundButton
+                {...styleProps}
+                active={selectedCategory == item ? true : false}
+                setActive={() => {
+                    setSelectedCategory(item);
+                }}>
+                {item}
+            </RoundButton>
+```
+
+
 
 
 ### 금주 회의 이슈 리스트 업
 - 필요한 디자인 부분
 - 시설, 트레이너 등등 DB값 전달 필요
+- 관리자 페이지에서 발생한 이슈 제플린에 멘션 
+    
+****
 
-**** 
+### Remind
+1) 피트니스 상세페이지 트레이너 탭과 관련된 기획적 이슈가 많음.
+2) Kanban 및 PR 내용 업데이트해도 검토하는 사람이 없는듯. 그냥 간략하게 정리하기.
 
 
 
