proejct/fitcok_mobile/211120

--- a/Project/fitcok_mobile/211120.md
+++ b/Project/fitcok_mobile/211120.md
@@ -3,8 +3,51 @@ Today I Lean & Worked
 ```
 
 ### 문의하기 스크린
-- 변경된 디자인 로직 구현 
+```
+변경된 디자인 로직 구현
+``` 
 
-SelectDetailOption.js 그룹 리스트 버튼 공통 컴퍼넌트 활용
+#### SelectDetailOption.js 그룹 리스트 버튼 Global Component 활용
 - 중복 선택 로직
 - '선택 없음' default Option 컴포넌트 추가'
+
+#### 이용항목 & 상세항목을 클래스 생성
+```
+class InquiryItem {
+constructor(type, detailType) {
+this.type = type; // ex) 이용권 , PT레슨, 기구 필라테스
+this.detailType = detailType; //Arraye eX) [1대1 PT, 그룹 PT]
+    }
+}
+```
+
+#### 상세 항목 업데이트 리셋 로직
+업데이트
+```
+  const updateOption = item => {
+     
+        let optionList = [...selectedOptions.detailType];
+        optionList.push(item);
+       
+        if (selectedOptions.detailType.includes(item))
+            optionList = selectedOptions.detailType.filter(ele => ele !== item);
+        else optionList.push(item);
+
+        const allOptions = totalOptinos.map(el => {
+            return title === el.type ? new InquiryItem(title, optionList) : el;
+        });
+              
+        setOptions(allOptions);
+        console.log(totalOptinos);
+    };
+```
+
+리셋 (초기화)
+```
+  const resetOption = () => {
+        const allOptions = totalOptinos.map(el => {
+            return title === el.type ? new InquiryItem(title, []) : el;
+        });
+        setOptions(allOptions);
+    };
+```
