project/fitcok_mobile/211124

--- a/DailyStudyLog/Swift/211123.md
+++ b/DailyStudyLog/Swift/211123.md
@@ -1,16 +1,13 @@
 ```
-    Starting Swift
+Today I Lean & Worked
 ```     
 
-### 키 맵핑
-```
-    vscode, intellij와 다르게 키가 매핑되어 있음
-```
+### 문의하기 스크린
 
-1) Quick Search & Find
-2) Expanding Scroll Left Right
-3) Scroll to end, right
-4) select word 등등..
+#### 알림 설정 스크린
+- Switch Toggle Logic
 
-은근히 복잡한 작업. 변경된 내용 저장
+
+
+
 
