--- a/DailyStudyLog/Swift/211124.md
+++ b/DailyStudyLog/Swift/211124.md
@@ -113,6 +113,7 @@ struct ContentView: View {
 ### 결론
 - 아직 도입부분이지만 강의 퀄리티가 좋다. (간결하고, 핵심적인 내용을 쉽게 전달)
 - Flutter와 비슷한 부분이 많음 (like Building Lego Approach)
+- Functional Programming이 중심이고 OOP형태의 접근도 한다는데, 이부분에서 이론적인 이해가 필요할듯.
 
 
  
