project/fitcok_front/211126.md

--- a/Project/fitcok_mobile/211125.md
+++ b/Project/fitcok_mobile/211125.md
@@ -8,7 +8,12 @@ Today I Lean & Worked
 - 완성 후, QA Document 만들기
 
 
+#### Navigation 설정
+- MyPage > NotificationScreen 
 
+#### 비밀번호 변경 스크린
+- 기본적인 레이아웃만 구현
+- 기획쪽 답변을 받고 진행
 
 ### Kanban에 이슈 기록
 - 피트니스 상세페이지 React Perform Issue
