--- a/DailyStudyLog/Swift/211214.md
+++ b/DailyStudyLog/Swift/211214.md
@@ -1,7 +1,6 @@
-<aside>
-💡 이전 과제 다시 구현.
 
-</aside>
+##💡 Swift Assignment
+
 
 - Pass Function to Child (Parent → Child)
 
@@ -79,3 +78,21 @@ setate : self.changeTheme(theme: fruite)) 이렇게 넘겨주게 되면 setSatet
 {} 컬리브레이스로 감싸서  Function 동작 형태의 타입으로 변경해준 후 정상적으로 작동
 
 자바 스크립트와 달리 타입이 굉장히 스트릭하기 때문에 이런 부분에서 주의가 필요할듯.
+
+
+### Function도 하나의 타입으로 인식해야됨
+- Function을 타입으로 가지는 변수를 선언할 수 있음.
+- 기본적으로 Function 어떤 인자를 받고 값을 반환하는 형태를 보임
+
+Example
+(Int, Int) -> Bool // Int 타입의 두개의 인자값을 받고 Boolean 값을 리턴
+(Double) -> Void // Double 타입 인자값을 받고 리턴 하지 않음.
+() -> Array<String> // 어떤 인자값도 받지 않고 스트린 형태의 배열의 리턴
+
+위에 형태는 모두 하나의 타입이다. View , Bool 등등 모두 타입이라고 이해하면 된다.
+
+Function을 하나의 타입으로 인지하고 있기 때문에 
+``` should declare typle after -> ``` 오류가 발생했던거였음.
+
+
+
