--- a/DailyStudyLog/Swift/211221.md
+++ b/DailyStudyLog/Swift/211221.md
@@ -3,6 +3,8 @@
 
 </aside>
 
+
+
 ### Determin Variable condtion if it’s var is nill or not
 
 ```swift
@@ -25,3 +27,55 @@ if let b = a {
 ```
 
 - if 다음에 변수를 선언하고  nil인이 아닌 확인이 필요한 var에 값을 대입하여 조건문을 완성 가능
+
+### filter and indicies (set Function to Function)
+
+```swift
+1)
+
+            for index in cards.indices {
+                if cards[index].isSelected {
+                    selectedIndicies.append(index)
+                }
+            }
+            if selectedIndicies.count == 1 {
+                return selectedIndicies.first
+            } else {
+                return nil
+            }
+
+2) 
+
+return cards.indices.filter({index in cards[index].isSelected}).oneAndOnly
+```
+
+## what filter returns ....
+
+```swift
+import Foundation
+
+var scoreList = [32, 53, 88, 23, 99]
+var filteredList: [Int]
+
+filteredList = scoreList.indices.filter({ index in
+    scoreList[index] > 50
+})
+
+print(filteredList)
+// filtredList  == [1, 2, 4]
+```
+
+array.indicies.filter({조건})을 실행하면 각 조건에 맞는 인덱스를 반환한다..
+
+이유가 뭘까...
+
+indicies는 range를 나타낸다. range를 필터링 하는 것이기 때문에 당연히 index를 리턴하는게 맞다.
+
+이해가 필요한 부분
+
+1) Closure
+
+2) functional programming
+
+3) get set syntax
+
