--- a/DailyStudyLog/Swift/211222.md
+++ b/DailyStudyLog/Swift/211222.md
@@ -1,8 +1,83 @@
 
 예제를 보지 않고 처음부터 끝까지 구현. Functional 프로그래밍에 대한 개념과 아래 코드에서 사용된 메소드에 대해 전반적으로 이해함.
 
-## MODEL
+### Property Observers
 
+- 스위프트는 항상 struct구조의 변경을 감지함
+- 구조가 변경될 때 특정 동작을 실행하게 할 수 있음
+
+```jsx
+var isSelected: Bool {
+		willSet {
+			if newValue {
+							someBusinessLogic()
+			} else {
+					    someOtherBusinessLogic()
+				}	
+		}
+}
+```
+
+ReactNative에서 useEffect로 특정 변수를 ‘subscribe’하는 원리와 유사하다고 생각됨
+
+위 예시 코드에 ‘willSet’ 프로퍼티 뿐만 아니라 ‘didset’ 프로퍼티를 사용하여 변경이 동작이 감지되고 완료된후 특정 로직을 실행시킬 수 있음 (react componentdidmount와 유사)
+
+### LazyHStack and LazyVstack, What is the lazy thing...
+
+`lazy` 변수는 처음 사용되기 전까지는 연산이 되지 않는다. 반면 computed property는 특정한 값을 연산하여 반환한다.
+
+이렇게 lazy는 화면 인터페이스 보여주지만 사용하기도 전에 불러오기 부담스러운 것들은  lazy를 사용한다.
+
+이처럼 필요하지만 사용하기도 전에 불러오기  것들은 `lazy`를 통해 선언해줄 수 있다
+
+### 
+
+## Clean code Rules
+
+### 1. syntax가 길어질 경우 해당 속성을 리턴하는 Function을 사용
+
+```jsx
+struct CardView: View {
+    let card: EmojiMemoryGame.Card
+    var body: some View {
+						 ....       
+            GeometryReader(content: {geometry in
+                ZStack {
+                   ....
+                        Text(card.content).font(font(in: geometry.size))
+                ....
+                }
+            })
+        }
+    }
+    
+    private func font(in size:CGSize) -> Font {
+        Font.system(size: min(size.width, size.height * CardStyleConstants.fontSacle))
+    }
+  
+}
+```
+
+### 2. nested struct을 사용하여 상수값 선언
+
+```jsx
+struct CardView: View {
+    let card: EmojiMemoryGame.Card
+    var body: some View {
+        let shape = RoundedRectangle(cornerRadius: CardStyleConstants.cornerRadius)
+       
+    ......
+		    
+    private struct CardStyleConstants {
+        static let cornerRadius: CGFloat = 20
+        static let lineWidth: CGFloat = 3
+        static let fontSacle: CGFloat = 0.3
+    }
+}
+```
+
+
+## MODEL
 ```swift
 // MARK: MODEL
 
@@ -101,16 +176,15 @@ import SwiftUI
 let emojis = ["😈", "😎", "💫", "👻", "👹", "🙉", "❤️", "💩", "👺", "💛", "💕", "😬", "😏", "😊"]
 
 struct EmojisMemoryGameView: View {
-    @ObservedObject var game: EmojisMemoryGame
+    @ObservedObject var game: EmojiMemoryGame
     var body: some View {
         VStack {
-            Text("Memorize")
-            LazyVGrid(columns: [GridItem(.flexible()), GridItem(.flexible()), GridItem(.flexible()), GridItem(.flexible())] ) {
+            LazyVGrid(columns: [GridItem(.adaptive(minimum: 100))]) {
                 ForEach(game.cards) { card in
                     CardView(card: card)
                         .aspectRatio(2/3, contentMode: .fit)
                         .onTapGesture {
-                            game.chooseCard(card)
+                            game.chooseCard(card: card)
                         }
                 }
             }
@@ -121,26 +195,42 @@ struct EmojisMemoryGameView: View {
 }
 
 struct CardView: View {
-    var card: MemoryGame<String>.Card
-    var body: some View { 
-        let shape = RoundedRectangle(cornerRadius: 16)
-        ZStack {
-            if card.isSelected {
-                shape.foregroundColor(Color.white)
-                shape.strokeBorder(lineWidth: 3).foregroundColor(Color.red)
-                Text(card.content)
-            } else if card.isMatched {
-                shape.opacity(0.0)
-            } else {
-                shape.foregroundColor(Color.red)
-            }
+    let card: EmojiMemoryGame.Card
+    var body: some View {
+        let shape = RoundedRectangle(cornerRadius: CardStyleConstants.cornerRadius)
+        VStack {
+            GeometryReader(content: {geometry in
+                ZStack {
+                    if card.isSelected {
+                        shape.foregroundColor(Color.white)
+                        shape.strokeBorder(lineWidth: CardStyleConstants.lineWidth).foregroundColor(Color.red)
+                        Text(card.content).font(font(in: geometry.size))
+                    } else if card.isMatched {
+                        shape.opacity(0.0)
+                    }
+                    else {
+                        shape.foregroundColor(Color.red)
+                    }
+                }
+            })
         }
+    }
+    
+    private func font(in size:CGSize) -> Font {
+        Font.system(size: min(size.width, size.height * CardStyleConstants.fontSacle))
+    }
+    
+    private struct CardStyleConstants {
+        static let cornerRadius: CGFloat = 20
+        static let lineWidth: CGFloat = 3
+        static let fontSacle: CGFloat = 0.3
     }
 }
 
 struct ContentView_Previews: PreviewProvider {
     static var previews: some View {
-        EmojisMemoryGameView(game: EmojisMemoryGame())
+        EmojisMemoryGameView(game: EmojiMemoryGame())
     }
+}
 }
 ```
