--- a/DailyStudyLog/Swift/211222.md
+++ b/DailyStudyLog/Swift/211222.md
@@ -36,7 +36,7 @@ ReactNative에서 useEffect로 특정 변수를 ‘subscribe’하는 원리와 
 
 ### 1. syntax가 길어질 경우 해당 속성을 리턴하는 Function을 사용
 
-```jsx
+```swift
 struct CardView: View {
     let card: EmojiMemoryGame.Card
     var body: some View {
@@ -60,7 +60,7 @@ struct CardView: View {
 
 ### 2. nested struct을 사용하여 상수값 선언
 
-```jsx
+```swift
 struct CardView: View {
     let card: EmojiMemoryGame.Card
     var body: some View {
