--- a/Project/SwiftUi_Alarm_Project/220114.md
+++ b/Project/SwiftUi_Alarm_Project/220114.md
@@ -3,7 +3,7 @@
 ### 기존 View에서 처리했던 State 값들과 로직은 은 VIEW MODEL로 이전 (MVVVM 아키텍쳐로 구성)
 
 ### Passing Data To VM 
-- VM Class에서 Model값을 초기화 할 때, 정확한 인덱스를 넘겨주는 프로퍼티가 존재.
+- VM Class에서 Model값을 초기화 할 때, a정확한 인덱스를 넘겨주는 프로퍼티가 존재.
 - 이때 인덱스 프로퍼티는 이전 스크린에서 전달받은 값으로 초기화됨.
 ```swift
  // 이전 화면
