project/alarm_app/220118

--- a/Project/SwiftUi_Alarm_Project/220114.md
+++ b/Project/SwiftUi_Alarm_Project/220114.md
@@ -55,3 +55,11 @@ Memorize Game 내부로직 View에서 사용하
 
 <a href="https://github.com/Joo-esc/SwiftUi_MissionBased_AlarmApp_Project/commit/d193fd6906bae60d1ade732e6737b4d56e4d6970">
 미션 완료시 Alert Dialog View 화면 & 라우팅 조건 설정</a>
+
+## Progress
+1) Binding & State
+
+2) MVVM 패턴 적용.
+```swift
+..2
+```
