project/alarm_app/220121

--- a/Project/SwiftUi_Alarm_Project/220120.md
+++ b/Project/SwiftUi_Alarm_Project/220120.md
@@ -1,5 +1,151 @@
 ## Progress
 
 ### TextField, PlaceHolder Extension
+```swift
+struct LabelSelectSection: View {
+    var option: SetAlarm
+    @State private var name = ""
+    var body: some View {
+        ZStack {
+            HStack {
+                Text("라벨").responsiveTextify(Style.textFontScale, .bold)
+                Spacer()
+                TextField("", text: $name)
+                    .onChange(of: name, perform: { newValue in
+                        option.label = newValue
+                    })
+                    .placeholder(when: name.isEmpty) {
+                        Text("선택안함").foregroundColor(.gray)
+                            .multilineTextAlignment(.trailing)
+                    }
+                    .foregroundColor(.brandColor)
+                    .multilineTextAlignment(.trailing)
+                    .responsiveTextify(Style.textFontScale, .regular)
+            }
+        }
+        .padding(.horizontal, Style.hPadding)
+        .roundRectify(Style.containerRadius, .leading)
+        .aspectRatio(Style.containerRatio, contentMode: .fit)
+    }
+    
+    private struct Style {
+        static let textFontScale: CGFloat = 12
+        static let hPadding: CGFloat = 18
+        static let containerRadius: CGFloat = 8
+        static let containerRatio: CGFloat = 330/53
+    }
+}
 
-## Commits
+
+// PlaceHolder 익스텐션, placeHolder을 스타일 모듈
+extension View {
+    func placeholder<Content: View>(
+        when shouldShow: Bool,
+        alignment: Alignment = .trailing,
+        @ViewBuilder placeholder: () -> Content) -> some View {
+
+        ZStack(alignment: alignment) {
+            placeholder().opacity(shouldShow ? 1 : 0)
+            self
+        }
+    }
+}
+```
+- placeHolder 익스텐션 모듈을 만들어 placeHolder 뷰를 스타일링 할 수 있게함.
+
+
+### TimeFormat 
+```swift
+Text(option.time, style : .time)
+   .responsiveTextify(30, .medium)
+   // ex) 9:43 AM
+```
+- Text struct 자체에 Date 프로퍼티를 포맷할 수 있는 이니셜라이저가 존재.
+- 이런 최적화 속성들이 네이티브 개발하면서 편리한 부분인듯.
+
+
+
+### MVVM 패턴 리뉴얼 / SetAlarmModel, SetAlarm
+- Model에서 모든 데이터를 store하고 ViewModel에서 Model의 게이트 키퍼 역할을 수행해야됨
+- 하지만 이전 구조는 View Model 모든 데이터를 store하고 있었음.
+#### VIEW MODEL
+```swift
+//
+// MARK: - VIEW MDOEL
+// 기상 미션의 난이도 문제 개수 등을 선택 옵션들의 값과 로직을 관리하는 모델
+//
+//  Created by 이해주 on 2022/01/16.
+//
+
+import SwiftUI
+
+
+class SetAlarm: ObservableObject {
+    typealias Option = SetAlarmModel.Alarm
+    @Published var model: SetAlarmModel = SetAlarmModel()
+    @Published var time = Date()
+    @Published var missionType: Int?
+    @Published var level: Double = 0.0
+    @Published var round: Double = 3.0
+    @Published var selectedDays = Week().weekList
+    @Published var label: String?
+    
+    
+    
+    // 선택된 요일의 'isSelect' 프로퍼티를 toggle
+    func chooseDay(_ day: Week.Day) {
+        selectedDays[day.id].isSelected.toggle()
+    }
+    
+    
+    var alarmList: [Option] {
+        model.alarmList
+    }
+    
+    //MARK: - Intent
+    func saveAlarm() {
+        model.saveAlarm(Option(id: UUID(), time: time, missionType: missionType, level: Int(level), round: Int(round), selectedDays: selectedDays, label: label, isActivate: true))
+    
+    }
+} 
+```
+#### MODEL
+```swift
+//
+//  MARK: - MODEL
+//  기상 미션의 난이도 문제 개수 등의 선택 옵션 값과 로직을 관리하는 모델
+//  Created by 이해주 on 2022/01/16.
+//
+
+import Foundation
+
+struct SetAlarmModel {
+    // 임시 알람 데이터 리스트, 실제 환경에서는 LocalDB나 서버로부터 데이터를 받아와야됨
+    var alarmList: [Alarm] = [
+        Alarm(id: UUID(), time: Calendar.current.date(byAdding: .hour, value: 5, to: Date())!, missionType: 0, level: 1, round: 4, selectedDays: Week().weekList, label: "운동", isActivate: true),
+        Alarm(id: UUID(), time: Calendar.current.date(byAdding: .hour, value: -5, to: Date())!, missionType: 0, level: 1, round: 3, selectedDays: Week().weekList, label: nil, isActivate: false),
+    ]
+    
+    // MARK: - 알림리스트에 새로운 알람을 추가하는 기능
+    mutating func saveAlarm(_ alarm: Alarm) {
+        alarmList.append(alarm)
+        print(alarmList.count)
+    }
+
+    
+    
+    
+    struct Alarm: Identifiable {
+        let id: UUID
+        var time: Date = Calendar.current.date(byAdding: .minute, value: 1, to: Date())! // 알람 시간
+        var missionType: Int? // 미션 종류
+        var level: Int? // 게임 미션 난이도
+        var round: Int? // 게임 미션 라운드
+        var selectedDays: [Week.Day] // 선택된 요일이 있을 경우 반복 X, 반대의 경우 반복 허용
+        var label: String? // 선택된 문구가 없을 경우 nil 값으로 문구 선택 여부를 판별
+        var isActivate = false // 알람 활성화
+    }
+}
+```
+
+- 하나의 MVVM 레이어를 기준으로 여러 스크린에서 프로퍼티를 수정할 때 비즈니스 로직을 어떻게 관리해야할지 고민.
