porject/alarm_app/220122

--- a/Project/SwiftUi_Alarm_Project/220121.md
+++ b/Project/SwiftUi_Alarm_Project/220121.md
@@ -23,7 +23,6 @@ func saveAlarm() {
 //            option.saveAlarm()
             option.editAlarm(option.alarm)
         }
-
         self.presentationMode.wrappedValue.dismiss()
     }
 ```
@@ -84,23 +83,24 @@ class SetAlarm: ObservableObject {
 #### 네비게이션 예외처리
 ```swift
 ForEach(alarm.alarmList) { item in
-                                    AlarmItemView(option: item,
-                                                  week: Week(), alarmOnOff: item.isActivate)
-                                        .onTapGesture {
-                                            selectedItem = item
-                                            alarm.passData(item)
-                                            self.goToNewView.toggle()
-                                        }
-                                        .background(
-                                            // 개별 알람 수정&설정 페이지로 이동하는 라우트 동작
-                                            NavigationLink(destination: SetAlarmScreen(option: alarm), isActive: self.$goToNewView) { EmptyView() }.hidden()
-                                        )
-
+                   AlarmItemView(option: item,
+                    week: Week(), alarmOnOff: item.isActivate)
+                     .onTapGesture {
+                     selectedItem = item
+                     alarm.passData(item)
+                     self.goToNewView.toggle() }
+                      .background(
+                      // 개별 알람 수정&설정 페이지로 이동하는 라우트 동작
+                       NavigationLink(destination: SetAlarmScreen(option: alarm), isActive: self.$goToNewView) { EmptyView() }.hidden())
                                 }
 ```
 - 기존에 설정된 알람아이템을 클릭하였을 경우 모델 값을 선택된 알람 값으로 initialize하고 수정 스크린으로 라우트.
 
 
+### 선택된 게임 미션 유형에 따라 일부 컴포넌트 예외처리 (기억력게임, 수학 게임)
+``` 
+maybe tommorow
+```
 
 
 
