project/ux_ui_research/220124

--- a/Project/[RN]fitcok_mobile/211212.md
+++ b/Project/[RN]fitcok_mobile/211212.md
@@ -1,6 +1,7 @@
 ```
-Today I Lean & Worked
+Today I Learn & Worked
 ```     
+
 
 
 ### EntrySection 
@@ -9,3 +10,8 @@ Today I Lean & Worked
   - 아이디 찾기
   - 비밀번호 찾기
   - Alert 창
+
+
+
+## 어쩌다 보니 퇴사 그리고 회고
+<a> 회고 </a>
