--- a/Project/[SwiftUi]Alarm_Project/220123[1차 완료].md
+++ b/Project/[SwiftUi]Alarm_Project/220123[1차 완료].md
@@ -1,5 +1,17 @@
 ## Progress
 
+```swift
+* 실제 알림 기능이 작동되는 상태는 X. 아래와 같은 기능은 구현이 되어 있음 *
+
+- 알람 수정 & 설정
+- 알람 옵션 설정 (미션, 시간, 라벨 등등)
+- 알람 미션 게임
+    - 라운드, 난이도 설정 
+    - 게임 미리보기(체험하기)
+    
+ ** 해당 프로젝트를 진행하면서 기본적인 개념이 부족함을 느낌. 부족한 부분을 채우고 다시 진행 예정 **
+```
+
 ### 수학 미션 게임 로직 & 뷰 완성
 ###VIEW
 ```swift 
